[gd_scene load_steps=28 format=3 uid="uid://xuqp0aib5k58"]

[ext_resource type="Script" uid="uid://cg0lxhpab8fmq" path="res://scenes/game_objects/experience_vial/droppable_item.gd" id="1_u0tq7"]
[ext_resource type="PackedScene" uid="uid://ccyrjfgwxtded" path="res://scenes/components/random_audio_player_component.tscn" id="2_3ua6l"]
[ext_resource type="AudioStream" uid="uid://du8rpgxamtej8" path="res://assets/audio/sfx/experience_vial/impactGeneric_light_000.ogg" id="3_3m1yp"]
[ext_resource type="AudioStream" uid="uid://c40emst64p6be" path="res://assets/audio/sfx/experience_vial/impactGeneric_light_001.ogg" id="4_auuh4"]
[ext_resource type="AudioStream" uid="uid://gn454vxbuj3v" path="res://assets/audio/sfx/experience_vial/impactGeneric_light_002.ogg" id="5_lq74c"]
[ext_resource type="AudioStream" uid="uid://b58kdvosjoxek" path="res://assets/audio/sfx/experience_vial/impactGeneric_light_003.ogg" id="6_bfcgf"]
[ext_resource type="AudioStream" uid="uid://5bxehib6x4tb" path="res://assets/audio/sfx/experience_vial/impactGeneric_light_004.ogg" id="7_o1r1b"]
[ext_resource type="Texture2D" uid="uid://b05mxe4btudnq" path="res://assets/textures/16x16sqr.png" id="8_rs5p4"]
[ext_resource type="Material" uid="uid://db6p43qyw62dl" path="res://assets/particles/Ooo Pretty.tres" id="9_egis6"]
[ext_resource type="Texture2D" uid="uid://bt1x01rlktxnr" path="res://assets/textures/TargetReticle.png" id="10_u6snc"]
[ext_resource type="Texture2D" uid="uid://bm67cym3f4tys" path="res://scenes/game_objects/experience_vial/experience_vial_cat_alt.png" id="11_7y7ja"]
[ext_resource type="PackedScene" uid="uid://dw7f8wl5cgno8" path="res://scenes/ui/off_screen_marker/target_reticles.tscn" id="12_23wew"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vrek4"]
radius = 16.0

[sub_resource type="Curve" id="Curve_pk5so"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.487421, 0.994832), 0.0, 0.0, 0, 0, Vector2(0.595912, 1), -0.26274, -0.26274, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_od2tn"]
curve = SubResource("Curve_pk5so")

[sub_resource type="Gradient" id="Gradient_kqjy3"]
colors = PackedColorArray(0, 0.4, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_k4ubx"]
gradient = SubResource("Gradient_kqjy3")

[sub_resource type="Curve" id="Curve_ngpf0"]
_limits = [0.0, 2.0, 0.0, 1.0]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.0424528, 0.688), 0.0, 0.0, 0, 0, Vector2(0.672956, 0.56), 2.00232, 2.00232, 0, 0, Vector2(0.833333, 0.2), 1.3568, 1.3568, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 5

[sub_resource type="CurveTexture" id="CurveTexture_77hc0"]
curve = SubResource("Curve_ngpf0")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_6whoa"]
particle_flag_disable_z = true
angle_min = -359.0
angle_max = 359.0
direction = Vector3(0, 0, 0)
spread = 180.0
flatness = 1.0
initial_velocity_min = 2.0
initial_velocity_max = 5.0
angular_velocity_min = 3.15998
angular_velocity_max = 338.15
gravity = Vector3(0, 0, 0)
radial_accel_min = 71.5
radial_accel_max = 100.0
scale_curve = SubResource("CurveTexture_77hc0")
color_ramp = SubResource("GradientTexture1D_k4ubx")
alpha_curve = SubResource("CurveTexture_od2tn")

[sub_resource type="Curve" id="Curve_qy8hv"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.243711, 1), 0.0, 0.0, 0, 0, Vector2(0.498428, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_60fej"]
curve = SubResource("Curve_qy8hv")

[sub_resource type="Gradient" id="Gradient_0db03"]
offsets = PackedFloat32Array(0.122837, 0.489619)
colors = PackedColorArray(0.98, 0.98, 0.98, 1, 0, 0.666667, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_fn2ea"]
gradient = SubResource("Gradient_0db03")

[sub_resource type="Curve" id="Curve_u4p2j"]
_limits = [0.0, 3.0, 0.0, 1.0]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.265723, 2.268), 0.787037, 0.787037, 0, 0, Vector2(0.501572, 3), 2.67072, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_b06vh"]
curve = SubResource("Curve_u4p2j")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_yatcx"]
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveTexture_b06vh")
color_ramp = SubResource("GradientTexture1D_fn2ea")
alpha_curve = SubResource("CurveTexture_60fej")

[node name="DroppableItem" type="Node2D"]
script = ExtResource("1_u0tq7")

[node name="RandomAudioPlayerComponent" parent="." instance=ExtResource("2_3ua6l")]
streams = Array[AudioStream]([ExtResource("3_3m1yp"), ExtResource("4_auuh4"), ExtResource("5_lq74c"), ExtResource("6_bfcgf"), ExtResource("7_o1r1b")])

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_vrek4")
debug_color = Color(0, 0.595, 0.7, 0.0901961)

[node name="ConstantGPUParticles2D" type="GPUParticles2D" parent="."]
amount = 32
texture = ExtResource("8_rs5p4")
fixed_fps = 0
trail_lifetime = 6.0
process_material = SubResource("ParticleProcessMaterial_6whoa")

[node name="GravityGPUParticles2D" type="GPUParticles2D" parent="."]
process_mode = 4
visible = false
scale = Vector2(4.78, 4.78)
emitting = false
amount = 16
texture = ExtResource("8_rs5p4")
lifetime = 1.78
preprocess = 0.97
fixed_fps = 0
visibility_rect = Rect2(-250, -250, 500, 500)
process_material = ExtResource("9_egis6")

[node name="PulsingGPUParticles2D" type="GPUParticles2D" parent="."]
amount = 1
texture = ExtResource("10_u6snc")
lifetime = 2.0
process_material = SubResource("ParticleProcessMaterial_yatcx")

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("11_7y7ja")
offset = Vector2(0, -1)

[node name="TargetReticles" parent="." instance=ExtResource("12_23wew")]
unique_name_in_owner = true
override_reticle_sprite_color = Color(0.458824, 0.890196, 1, 1)
override_icon = ExtResource("11_7y7ja")
override_icon_scale = true
override_icon_scale_amount = 3.0
